Archive2/62/cfb271ed3a5681/output
main.cpp: In function 'int main()':
main.cpp:5:40: warning: '>>' operator is treated as two right angle brackets in C++11 [-Wc++0x-compat]
     typedef std::vector<std::bitset<128>> BITSET_VEC;
                                        ^
main.cpp:5:40: note: suggest parentheses around '>>' expression
main.cpp:5:43: error: 'BITSET_VEC' was not declared in this scope
     typedef std::vector<std::bitset<128>> BITSET_VEC;
                                           ^
main.cpp:5:43: error: template argument 1 is invalid
main.cpp:5:30: error: template argument 1 is invalid
     typedef std::vector<std::bitset<128>> BITSET_VEC;
                              ^
main.cpp:5:30: error: template argument 2 is invalid
main.cpp:5:18: warning: 'typedef' was ignored in this declaration
     typedef std::vector<std::bitset<128>> BITSET_VEC;
                  ^
main.cpp:6:16: error: expected ';' before 'v'
     BITSET_VEC v;
                ^
